Add test docs & fix scripts.

--- a/source/test/fixtures/index.html
+++ b/source/test/fixtures/index.html
@@ -8,6 +8,6 @@
     <script>
       window.BOOTSTRAP_CLIENT_STATE = { title: 'Client render' };
     </script>
-    <script src="/static/index.js"></script>
+    <script src="/static/browser-tests.js"></script>
   </body>
 </html>
