--- a/source/test/fixtures/index.html
+++ b/source/test/fixtures/index.html
@@ -6,7 +6,7 @@
   <body>
     <div id='root'></div>
     <script>
-      window.BOOTSTRAP_CLIENT_STATE = { title: 'Client render' };
+      window.BOOTSTRAP_CLIENT_STATE = { title: 'Untitled' };
     </script>
     <script src="/static/browser-tests.js"></script>
   </body>
